tokens 12 horas
